@startuml

Administrador ..> "*" CriterioDePertenencia
Administrador --> "*" Coleccion
Administrador ..> Hecho
Administrador ..> SolicitudDeEliminacion

Hecho --> "*" SolicitudDeEliminacion
Coleccion -->"*" Hecho
Coleccion -->"*" CriterioDePertenencia
Contribuyente ..> Hecho
Visualizador ..> Coleccion
Visualizador ..>"*" CriterioDePertenencia

class Administrador {
- nombre : String
- email : String
+ coleccionesCreadas : List<Coleccion>

+ crearColeccion(String titulo, String descripcion, List<CriterioDePertenencia> criterios) : Coleccion
+ leerCSV(String rutaArchivo) : Void
+ aceptarSolicitudDeEliminacion(Hecho hecho, SolicitudDeEliminacion solicitud) : Void
+ rechazarSolicitudDeEliminacion(SolicitudDeEliminacion solicitud) : Void

}


class Coleccion {
- hechos : List<Hecho>
+ titulo : String
+ descripcion : String
+ criterioDePertenencia : List<CriterioDePertenencia>

+leerSegunCriterios(List<CriterioDePertenencia> criterios, String archivoCSV) : Void
+ agregarCriterio(CriterioDePertenencia criterio) : void
+ normalizar (String texto) : String
+ agregarHecho(Hecho hecho) : Void


}

class Contribuyente {
 + nombre : String
 + apellido : String
 + edad : Int

 +crearSolicitudEliminacion(Hecho hecho, String justificacion) : Void

}

class CriterioDePertenencia {
+ columna : String
+ tipo : String
+ valor : String
+desde : LocalDate
+ hasta : LocalDate

+ cumple(String valorEnFila) : Boolean
}

class Hecho{
+ titulo : String
+ descripcion : String
+ categoria : String
+ contenidoMultimedia : Optional<ContenidoMultimedia>
+latitud : Double
+ longitud : Double
+ fechaAcontecimiento : LocalDate
+ fechaCarga : LocalDate
+ etiquetas : List<String>
+ solicitudes : List <SolicitudDeEliminacion>
+ eliminado : boolean

+ verificarEliminacion() : Void
+marcarComoEliminado() : Void
+ estaEliminado() : Boolean
+ agregarEtiqueta(String etiqueta) : Void

}

class SolicitudDeEliminacion {
+ justificacion : String
+ estado : String

+ aceptarSolicitud() : Void
+ rechazarSolicitud() : Void
}

class Visualizador {
+ nombre : String
- filtrosPersonales : List<CriterioDePertenencia>
+ agregarFiltro(CriterioDePertenencia criterio) : void
+ visualizarHechos(Coleccion coleccion) : void
+ visualizarHechosFiltrados(Coleccion coleccion) : void
}

@enduml
//+ - # publico privado protegido